--- a/shop1/css/base.css
+++ b/shop1/css/base.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font: 14px/1.5 sans-serif;
+    font: 14px/1.5 "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
     color: #333;
 }
 
