--- a/shop1/css/index.css
+++ b/shop1/css/index.css
@@ -34,13 +34,48 @@ body {
 }
 
 .header .nav ul li {
-    margin-right: 24px; 
+    margin-right: 24px;
 }
 
 .header .nav ul a {
-    /* display: block; */
+    display: block;
     padding: 6px 8px;
     font-size: 19px;
     line-height: 27px;
+}
+
+.header .nav ul li .active,
+.header .nav ul li a:hover {
+    border-bottom: 2px solid #00a4ff;
+}
+
+.search {
+    display: flex;
+    margin-left: 64px;
+    padding-left: 19px;
+    padding-right: 12px;
+    width: 412px;
+    height: 40px;
+    background-color: #f3f5f7;
+    border-radius: 20px;
+}
+
+.search input {
+    flex: 1;
+    border: none;
+    background-color: transparent;
+    outline: none;
+}
+
+.search input::placeholder {
+    font-size: 14px;
+    color: #999;
+}
+
+.search a {
+    align-self: center;
+    width: 16px;
+    height: 16px;
+    background-image: url(../images/search.png);
 }
 
