--- a/shop1/css/index.css
+++ b/shop1/css/index.css
@@ -127,3 +127,54 @@ body {
     color: #00a4ff;
 }
 
+.banner .right {
+    margin-top: 60px;
+    width: 218px;
+    height: 305px;
+    background-color: #209dd5;
+    border-radius: 10px;
+}
+
+.banner .right h3 {
+    margin-left: 14px;
+    height: 48px;
+    line-height: 48px;
+    font-size: 15px;
+    color: #fff;
+    font-weight: 400;
+}
+
+.banner .right .content {
+    padding: 14px;
+    height: 257px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.banner .right dl {
+    margin-bottom: 12px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.banner .right .dt {
+    margin-bottom: 8px;
+    line-height: 20px;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.banner .right .content dd {
+    margin-bottom: 8px;
+    line-height: 16px;
+    font-size: 12px;
+}
+
+.banner .right .content dd span {
+    color: #00a4ff
+}
+
+.banner .right .content dd strong {
+    color: #7d7d7d;
+    font-weight: 400;
+}
+
