--- a/shop1/css/index.css
+++ b/shop1/css/index.css
@@ -156,7 +156,7 @@ body {
     border-bottom: 1px solid #e0e0e0;
 }
 
-.banner .right .dt {
+.banner .right dt {
     margin-bottom: 8px;
     line-height: 20px;
     font-size: 14px;
@@ -178,3 +178,49 @@ body {
     font-weight: 400;
 }
 
+.banner .right a {
+    display: block;
+    height: 32px;
+    line-height: 32px;
+    background-color: #00a4ff;
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
+    border-radius: 15px;
+}
+
+.recommend {
+    display: flex;
+    margin-top: 11px;
+    padding: 0 20px;
+    height: 60px;
+    background-color: #fff;
+    box-shadow: 0px 1px 2px 0px rgba(211, 211, 211, 0.5);
+    line-height: 60px;
+}
+
+.recommend h3 {
+    font-size: 18px;
+    color: #00a4ff;
+    font-weight: normal;
+}
+
+.recommend ul {
+    display: flex;
+    flex: 1;
+}
+
+.recommend ul li a {
+    padding: 0 24px;
+    font-size: 18px;
+    border-right: 1px solid #e0e0e0;
+}
+
+.recommend ul li:last-child a {
+    border-right: 0;
+}
+
+.recommend .modify {
+    font-size: 16px;
+    color: #00a4ff;
+}
