--- a/shop1/css/index.css
+++ b/shop1/css/index.css
@@ -217,10 +217,11 @@ body {
 }
 
 .recommend ul li:last-child a {
-    border-right: 0;
+    border-right: none;
 }
 
 .recommend .modify {
     font-size: 16px;
     color: #00a4ff;
 }
+
