--- a/0704/fontello/css/fontello.css
+++ b/0704/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?4134560');
-  src: url('../font/fontello.eot?4134560#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?4134560') format('woff2'),
-       url('../font/fontello.woff?4134560') format('woff'),
-       url('../font/fontello.ttf?4134560') format('truetype'),
-       url('../font/fontello.svg?4134560#fontello') format('svg');
+  src: url('../font/fontello.eot?35332494');
+  src: url('../font/fontello.eot?35332494#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?35332494') format('woff2'),
+       url('../font/fontello.woff?35332494') format('woff'),
+       url('../font/fontello.ttf?35332494') format('truetype'),
+       url('../font/fontello.svg?35332494#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?4134560#fontello') format('svg');
+    src: url('../font/fontello.svg?35332494#fontello') format('svg');
   }
 }
 */
@@ -54,7 +54,6 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.iconfont-emo-happy:before { content: '\e800'; } /* '' */
 .iconfont-feather:before { content: '\e800'; } /* '' */
 .iconfont-glass:before { content: '\e801'; } /* '' */
 .iconfont-to-end-alt:before { content: '\e802'; } /* '' */
@@ -71,9 +70,25 @@
 .iconfont-globe-alt:before { content: '\e80d'; } /* '' */
 .iconfont-looped-square-interest:before { content: '\e80e'; } /* '' */
 .iconfont-looped-square-outline:before { content: '\e80f'; } /* '' */
+.iconfont-emo-happy:before { content: '\e810'; } /* '' */
+.iconfont-left-open:before { content: '\e811'; } /* '' */
+.iconfont-right-open:before { content: '\e812'; } /* '' */
+.iconfont-up-open:before { content: '\e813'; } /* '' */
+.iconfont-down-open:before { content: '\e814'; } /* '' */
+.iconfont-down-dir:before { content: '\e815'; } /* '' */
+.iconfont-up-dir:before { content: '\e816'; } /* '' */
+.iconfont-left-dir:before { content: '\e817'; } /* '' */
+.iconfont-right-dir:before { content: '\e818'; } /* '' */
 .iconfont-food:before { content: '\f0f5'; } /* '' */
 .iconfont-beer:before { content: '\f0fc'; } /* '' */
+.iconfont-circle-empty:before { content: '\f10c'; } /* '' */
+.iconfont-circle:before { content: '\f111'; } /* '' */
 .iconfont-reply-all:before { content: '\f122'; } /* '' */
 .iconfont-down:before { content: '\f175'; } /* '' */
+.iconfont-up:before { content: '\f176'; } /* '' */
+.iconfont-left:before { content: '\f177'; } /* '' */
+.iconfont-right:before { content: '\f178'; } /* '' */
+.iconfont-dot-circled:before { content: '\f192'; } /* '' */
 .iconfont-bank:before { content: '\f19c'; } /* '' */
 .iconfont-building-filled:before { content: '\f1ad'; } /* '' */
+.iconfont-circle-thin:before { content: '\f1db'; } /* '' */
