--- a/xtx-pc/css/common.css
+++ b/xtx-pc/css/common.css
@@ -131,3 +131,55 @@
     background-color: #E26237;
     border-radius: 8px;
 }
+
+.footer {
+    height: 580px;
+    background-color: #F5F5F5;
+}
+
+.footer .service {
+    padding: 60px 0;
+    height: 178px;
+    border-bottom: 1px solid #E8E8E8;
+}
+
+.footer .service ul {
+    display: flex;
+    justify-content: space-evenly
+}
+
+.footer .service li {
+    display: flex;
+    width: 190px;
+    height: 58px;
+}
+
+.footer .service li h5 {
+    margin-right: 20px;
+    width: 58px;
+    height: 58px;
+    background-image: url(../images/sprite.png);
+}
+
+.service li:nth-child(2) h5 {
+    background-position: 0 -58px;
+}
+
+.service li:nth-child(3) h5 {
+    background-position: 0 -116px;
+}
+
+.service li:nth-child(4) h5 {
+    background-position: 0 -174px;
+}
+
+.footer .service li p {
+    font-size: 28px;
+    line-height: 58px;
+}
+
+.footer .help {
+    height: 300px;
+    background-color: orange;
+    border-bottom: 1px solid #E8E8E8;
+}
