--- a/xtx-pc/css/common.css
+++ b/xtx-pc/css/common.css
@@ -179,7 +179,57 @@
 }
 
 .footer .help {
+    padding-top: 60px;
+    display: flex;
+    justify-content: space-between;
     height: 300px;
-    background-color: orange;
     border-bottom: 1px solid #E8E8E8;
+}
+
+.footer .help .left {
+    display: flex;
+}
+
+.footer .help .left dl {
+    margin-right: 84px;
+}
+
+.footer .help .left dl:last-child {
+    margin-right: 0;
+}
+
+.footer .help .left dt {
+    margin-bottom: 30px;
+    font-size: 18px;
+}
+
+.footer .help .left dd {
+    margin-bottom: 10px;
+}
+
+.footer .help .left dd a {
+    color: #969696;
+}
+
+.footer .help .left dd .iconfont {
+    color: #5EB69C;
+}
+
+.footer .help .right ul {
+    display: flex;
+}
+
+.footer .help .right li:first-child {
+    margin-right: 55px;
+}
+
+.footer .help .right img {
+    margin-bottom: 10px;
+    width: 120px;
+    height: 120px;
+}
+
+.footer .help .right p {
+    color: #969696;
+    text-align: center;
 }
