--- a/xtx-pc/css/common.css
+++ b/xtx-pc/css/common.css
@@ -183,7 +183,6 @@
     display: flex;
     justify-content: space-between;
     height: 300px;
-    border-bottom: 1px solid #E8E8E8;
 }
 
 .footer .help .left {
@@ -232,4 +231,18 @@
 .footer .help .right p {
     color: #969696;
     text-align: center;
+}
+
+.footer .copyright {
+    text-align: center;
+}
+
+.footer .copyright p {
+    margin-bottom: 10px;
+    color: #A1A1A1;
+}
+
+.footer .copyright a {
+    margin: 10px;
+    color: #A1A1A1;
 }
