--- a/xtx-pc/css/index.css
+++ b/xtx-pc/css/index.css
@@ -4,6 +4,7 @@
 }
 
 .banner .wrapper {
+    position: relative;
     overflow: hidden;
     height: 500px;
 }
@@ -11,4 +12,46 @@
 .banner .pic {
     display: flex;
     width: 3720px;
+}
+
+.banner .subnav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 500px;
+    background-color: rgba(0, 0, 0, 0.42);
+}
+
+.banner .subnav li {
+    padding-left: 30px;
+    padding-right: 15px;
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    line-height: 50px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.banner .subnav li:hover {
+    background-color: #00BE9A;
+}
+
+.banner .subnav li a {
+    margin-right: 10px;
+    font-size: 14px;
+    color: #fff;
+
+}
+
+.banner .subnav li .classify {
+    font-size: 16px;
+    margin-right: 15px;
+}
+
+
+.banner .subnav li .iconfont {
+    font-size: 14px;
+    color: #fff;
 }
