--- a/xtx-pc/css/index.css
+++ b/xtx-pc/css/index.css
@@ -241,3 +241,51 @@
 .title .right .classify .active a {
     color: #fff;
 }
+
+.content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.content .left {
+    width: 248px;
+    height: 610px;
+}
+
+.content .right {
+    width: 968px;
+    height: 610px;
+}
+
+.content .right ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.content .right ul li {
+    padding: 10px 21px 0;
+    width: 242px;
+    height: 305px;
+    border: 2px solid #00BE9A;
+}
+
+.content .right .pic {
+    width: 200px;
+    height: 180px;
+}
+
+.content .right .text .info {
+    margin-top: 14px;
+    margin-bottom: 5px;
+    height: 60px;
+    line-height: 19px;
+}
+
+.content .right .text .price {
+    color: #AF2F22;
+}
+
+.content .right .text .price span {
+    margin-left: 5px;
+    font-size: 22px;
+}
