--- a/xtx-pc/css/index.css
+++ b/xtx-pc/css/index.css
@@ -263,10 +263,12 @@
 }
 
 .content .right ul li {
+    position: relative;
     padding: 10px 21px 0;
     width: 242px;
     height: 305px;
-    border: 2px solid #00BE9A;
+    border: 2px solid #fff;
+    overflow: hidden;
 }
 
 .content .right .pic {
@@ -288,4 +290,44 @@
 .content .right .text .price span {
     margin-left: 5px;
     font-size: 22px;
+}
+
+.content .right .cover {
+    padding-top: 15px;
+    position: absolute;
+    left: 0;
+    bottom: -86px;
+    width: 242px;
+    height: 84px;
+    background-color: #00BE9A;
+    text-align: center;
+    color: #fff;
+    transition: all 0.5s;
+}
+
+.content .right .cover p:nth-child(1) {
+    font-size: 18px;
+}
+
+.content .right .cover p:nth-child(2) {
+    margin: 3px auto 6px;
+    width: 120px;
+    height: 1px;
+    background-color: rgba(255, 255, 255, 0.11);
+}
+
+.content .right .cover p:nth-child(3) {
+    font-size: 13px;
+}
+
+.content .right .cover p:nth-child(3) .iconfont {
+    font-size: 14px;
+}
+
+.content .right li:hover .cover {
+    bottom: 0;
+}
+
+.content .right li:hover {
+    border: 2px solid #00BE9A;
 }
