--- a/jswz-phone/css/index.css
+++ b/jswz-phone/css/index.css
@@ -31,3 +31,50 @@ a {
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+header {
+  padding: 0 0.4rem;
+  display: flex;
+  justify-content: space-between;
+  height: 1.17333333rem;
+  line-height: 1.17333333rem;
+}
+header .icon-left {
+  font-size: 0.58666667rem;
+}
+header h3 {
+  font-size: 0.45333333rem;
+}
+header .note {
+  font-size: 0.4rem;
+  color: #2CB5A5;
+}
+.banner {
+  margin-top: 0.8rem;
+  margin-bottom: 0.90666667rem;
+  text-align: center;
+}
+.banner img {
+  margin-bottom: 0.48rem;
+  width: 6.4rem;
+  height: 5.49333333rem;
+}
+.banner p {
+  font-size: 0.42666667rem;
+}
+.banner p span {
+  color: #16C2A3;
+}
+.type {
+  padding: 0 0.4rem;
+}
+.type li {
+  margin-bottom: 0.4rem;
+}
+.type a {
+  display: flex;
+  align-items: center;
+  padding: 0 0.4rem;
+  height: 2.08rem;
+  border: 0.01333333rem solid #EDEDEDE5;
+  border-radius: 0.10666667rem;
+}
