--- a/mobile-4/less/vw和vh配合less.less
+++ b/mobile-4/less/vw和vh配合less.less
@@ -5,6 +5,11 @@
 
 .box1 {
     width: (77 / @vw);
-    height: (55 / @vh);
+    height: (55 / @vw);
     background-color: pink;
+}
+.box2 {
+    width: (77 / @vh);
+    height: (55 / @vh);
+    background-color: green;
 }
