--- a/kwyy/css/index.css
+++ b/kwyy/css/index.css
@@ -31,3 +31,29 @@ a {
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+body {
+  background-color: #f9fafb;
+}
+.wrapper {
+  padding: 0 4vw;
+}
+header {
+  padding: 0 4vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+  height: 13.33333333vw;
+  background-color: #fff;
+}
+header .logo {
+  height: 13.33333333vw;
+}
+header .download {
+  width: 21.33333333vw;
+  height: 8vw;
+  line-height: 8vw;
+  border-radius: 4vw;
+  background-color: #ffe31b;
+  text-align: center;
+}
