--- a/kwyy/css/index.css
+++ b/kwyy/css/index.css
@@ -34,9 +34,6 @@ a {
 body {
   background-color: #f9fafb;
 }
-.wrapper {
-  padding: 0 4vw;
-}
 header {
   padding: 0 4vw;
   display: flex;
@@ -56,4 +53,50 @@ header .download {
   border-radius: 4vw;
   background-color: #ffe31b;
   text-align: center;
+}
+.search {
+  padding: 2.66666667vw 4vw;
+  height: 13.86666667vw;
+}
+.search .text {
+  height: 8.53333333vw;
+  line-height: 8.53333333vw;
+  text-align: center;
+  background-color: #f2f4f5;
+  border-radius: 4.26666667vw;
+  font-size: 3.73333333vw;
+  color: #a1a4b3;
+}
+.search .text .icon-sousuo {
+  font-size: 4.26666667vw;
+}
+.banner {
+  padding: 0 4vw;
+  height: 28.8vw;
+}
+.banner li {
+  height: 28.8vw;
+}
+.banner li img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1.06666667vw;
+}
+.list {
+  padding: 5.33333333vw 4vw 0;
+}
+.title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 4.26666667vw;
+  height: 6.66666667vw;
+  line-height: 6.66666667vw;
+}
+.title h4 {
+  font-size: 5.33333333vw;
+}
+.title a {
+  font-size: 3.2vw;
+  color: #a1a4b3;
 }
