--- a/kwyy/less/index.less
+++ b/kwyy/less/index.less
@@ -8,10 +8,6 @@ body {
     background-color: #f9fafb;
 }
 
-.wrapper {
-    padding: 0 (15 / @vw);
-}
-
 header {
     padding: 0 (15 / @vw);
     display: flex;
@@ -32,5 +28,58 @@ header {
         border-radius: (15 / @vw);
         background-color: #ffe31b;
         text-align: center;
+    }
+}
+
+.search {
+    padding: (10 / @vw) (15 / @vw);
+    height: (52 / @vw);
+    // background-color: pink;
+    .text {
+        height: (32 / @vw);
+        line-height: (32 / @vw);
+        text-align: center;
+        background-color: #f2f4f5;
+        border-radius: (16 / @vw);
+        font-size: (14 / @vw);
+        color: #a1a4b3;
+        .icon-sousuo {
+            font-size: (16 /@vw);
+        }
+    }
+}
+
+.banner {
+    padding: 0 (15 /@vw);
+    height: (108 / @vw);
+    // background-color: pink;
+    li {
+        height: (108 / @vw);
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: (4 / @vw);
+        }
+    }
+}
+
+.list {
+    padding: (20 / @vw) (15 / @vw) 0;
+}
+
+.title {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: (16 /@vw);
+    height: (25 / @vw);
+    line-height: (25 / @vw);
+    // background-color: pink;
+    h4 {
+        font-size: (20 / @vw);
+    }
+    a {
+        font-size: (12 /@vw);
+        color: #a1a4b3;
     }
 }
