--- a/kwyy/less/index.less
+++ b/kwyy/less/index.less
@@ -13,6 +13,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
     width: (375 / @vw);
     height: (50 / @vw);
     background-color: #fff;
@@ -34,6 +35,7 @@ header {
 .search {
     padding: (10 / @vw) (15 / @vw);
     height: (52 / @vw);
+
     // background-color: pink;
     .text {
         height: (32 / @vw);
@@ -43,6 +45,7 @@ header {
         border-radius: (16 / @vw);
         font-size: (14 / @vw);
         color: #a1a4b3;
+
         .icon-sousuo {
             font-size: (16 /@vw);
         }
@@ -52,9 +55,11 @@ header {
 .banner {
     padding: 0 (15 /@vw);
     height: (108 / @vw);
+
     // background-color: pink;
     li {
         height: (108 / @vw);
+
         img {
             width: 100%;
             height: 100%;
@@ -66,6 +71,39 @@ header {
 
 .list {
     padding: (20 / @vw) (15 / @vw) 0;
+
+    .content {
+        li {
+            display: flex;
+            margin-bottom: (16 / @vw);
+            height: (105 / @vw);
+            background-color: #fff;
+            border-radius: (10 / @vw);
+
+            img {
+                margin-right: (20 / @vw);
+                height: (105 / @vw);
+                width: (105 / @vw);
+                border-radius: (10 / @vw);
+            }
+
+            a {
+                display: block;
+                font-size: (12 /@vw);
+                color: #a1a4b3;
+                line-height: 1.8;
+            }
+
+            .more {
+                font-size: (14 / @vw);
+                color: #333;
+
+                .icon-right {
+                    font-size: (16 / @vw);
+                }
+            }
+        }
+    }
 }
 
 .title {
@@ -74,12 +112,51 @@ header {
     margin-bottom: (16 /@vw);
     height: (25 / @vw);
     line-height: (25 / @vw);
+
     // background-color: pink;
     h4 {
         font-size: (20 / @vw);
     }
+
     a {
         font-size: (12 /@vw);
         color: #a1a4b3;
+    }
+}
+
+.recommend {
+    margin: (20 / @vw) (15 / @vw) 0;
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-bottom: (16 / @vw);
+
+        li {
+            width: (105 / @vw);
+            height: (159 / @vw);
+            // background-color: pink;
+
+            .pic {
+                position: relative;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                    border-radius: (10 / @vw);
+                }
+
+                .cover {
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    background-color: rgba(0, 0, 0, 0.8);
+                    color: #fff;
+                    border-radius: 0 (10 / @vw);
+                }
+            }
+        }
     }
 }
