--- a/kwyy/css/index.css
+++ b/kwyy/css/index.css
@@ -39,6 +39,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
   width: 100vw;
   height: 13.33333333vw;
   background-color: #fff;
@@ -86,6 +87,32 @@ header .download {
 .list {
   padding: 5.33333333vw 4vw 0;
 }
+.list .content li {
+  display: flex;
+  margin-bottom: 4.26666667vw;
+  height: 28vw;
+  background-color: #fff;
+  border-radius: 2.66666667vw;
+}
+.list .content li img {
+  margin-right: 5.33333333vw;
+  height: 28vw;
+  width: 28vw;
+  border-radius: 2.66666667vw;
+}
+.list .content li a {
+  display: block;
+  font-size: 3.2vw;
+  color: #a1a4b3;
+  line-height: 1.8;
+}
+.list .content li .more {
+  font-size: 3.73333333vw;
+  color: #333;
+}
+.list .content li .more .icon-right {
+  font-size: 4.26666667vw;
+}
 .title {
   display: flex;
   justify-content: space-between;
@@ -99,4 +126,34 @@ header .download {
 .title a {
   font-size: 3.2vw;
   color: #a1a4b3;
+}
+.recommend {
+  margin: 5.33333333vw 4vw 0;
+}
+.recommend ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 4.26666667vw;
+}
+.recommend ul li {
+  width: 28vw;
+  height: 42.4vw;
+}
+.recommend ul li .pic {
+  position: relative;
+}
+.recommend ul li .pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 2.66666667vw;
+}
+.recommend ul li .pic .cover {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 0 2.66666667vw;
 }
