--- a/kwyy/less/index.less
+++ b/kwyy/less/index.less
@@ -160,3 +160,33 @@ header {
         }
     }
 }
+
+.download {
+    padding-left: (15 / @vw);
+    padding-right: (10 / @vw);
+    display: flex;
+    left: (15 / @vw);
+    bottom: (30 / @vw);
+    align-items: center;
+    position: fixed;
+    width: (345 / @vw);
+    height: (45 / @vw);
+    background-color: #fff;
+    border-radius: (22.5 / @vw);
+    img {
+        margin-right: (10 / @vw);
+        width: (36 / @vw);
+        height: (36 / @vw);
+    }
+    p {
+        flex: 1;
+    }
+    span {
+        width: (32 / @vw);
+        height: (32 / @vw);
+        border-radius: (16 / @vw);
+        background-color: #f2f3f5;
+        text-align: center;
+        line-height: (32 / @vw);
+    }
+}
