--- a/kwyy/css/index.css
+++ b/kwyy/css/index.css
@@ -157,3 +157,32 @@ header .download {
   color: #fff;
   border-radius: 0 2.66666667vw;
 }
+.download {
+  padding-left: 4vw;
+  padding-right: 2.66666667vw;
+  display: flex;
+  left: 4vw;
+  bottom: 8vw;
+  align-items: center;
+  position: fixed;
+  width: 92vw;
+  height: 12vw;
+  background-color: #fff;
+  border-radius: 6vw;
+}
+.download img {
+  margin-right: 2.66666667vw;
+  width: 9.6vw;
+  height: 9.6vw;
+}
+.download p {
+  flex: 1;
+}
+.download span {
+  width: 8.53333333vw;
+  height: 8.53333333vw;
+  border-radius: 4.26666667vw;
+  background-color: #f2f3f5;
+  text-align: center;
+  line-height: 8.53333333vw;
+}
